# frame_flow

./: .gitignore  Makefile  README.md  docker-compose.yml
docs/: architecture.md
init-scripts/: create_dbs.sql
scripts/: run_migrations.sh
services/auth_service/: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
services/auth_service/auth_service/: config.py  main.py  models.py  routes.py
services/auth_service/auth_service/repo/: __init__.py  database.py  user_repo.py
services/auth_service/auth_service/service/: __init__.py  auth.py
services/auth_service/db/: env.py
services/auth_service/db/versions/: e8188bf4c805_create_users_tables.py
services/download_service/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
services/download_service/download_service/: config.py  main.py  routes.py
services/orchestrator/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
services/orchestrator/orchestrator/: config.py  event_orchestrator.py  main.py  models.py
services/orchestrator/orchestrator/handlers/: __init__.py  file_processed.py  file_uploaded.py  interface.py
services/process_service/: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  ruff.toml
services/process_service/db/: env.py
services/process_service/db/versions/: d7dae902e9d7_create_file_process_table.py
services/process_service/process_service/: config.py  main.py  models.py  process.py
services/upload_service/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
services/upload_service/db/: env.py
services/upload_service/db/versions/: 4250f961dde9_create_files_table.py
services/upload_service/upload_service/: config.py  main.py  routes.py
services/upload_service/upload_service/repo/: __init__.py  database.py  file_repo.py
services/upload_service/upload_service/service/: __init__.py  models.py  upload.py
