[project]
name = "download-service"
version = "0.1.0"
description = ""
authors = [
    {name = "taua-almeida",email = "tauan96@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "redis (>=5.2.1,<6.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aioboto3 (>=13.4.0,<14.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.6"

