[project]
name = "process-service"
version = "0.1.0"
description = ""
authors = [
    {name = "taua-almeida",email = "tauan96@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.115.7,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "aioboto3 (>=13.4.0,<14.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "aiozipstream (>=0.4,<0.5)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
process = "process_service.main:run"
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.5"

